# hackermatch

./: api.Dockerfile  docker-compose.yml  email.Dockerfile  libs.Dockerfile  migrations.Dockerfile  submission.Dockerfile
api/: .flake8  .gitignore  setup.cfg  start.sh  uwsgi.ini
api/src/hackermatch/api/: __init__.py  channels.py  endpoints.py  submission.py
db/: .flake8  .gitignore  README.md  alembic.ini  setup.cfg
db/scripts/: env.py
db/scripts/versions/: c30d1bfa6fb3_initial_schema.py
db/src/hackermatch/db/: models.py
email/: README.md  setup.cfg
email/src/hackermatch/email/: __init__.py  server.py  servicer.py
grpc/: .flake8  README.md  email.proto  regenerate_stubs.sh  setup.cfg  submission.proto
grpc/python/hackermatch/grpc/stubs/: email_pb2.py  email_pb2_grpc.py  submission_pb2.py  submission_pb2_grpc.py
submission/: README.md  setup.cfg
submission/src/hackermatch/submission/: __init__.py  server.py  servicer.py
web/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.jsx  LabelledSpinner.jsx  Net.jsx  SubmissionForm.jsx  index.jsx
