[metadata]
name = hackermatch_api_server
version = 0.0.1
description = HackerMatch API Server
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    grpcio
    grpcio-tools
    flask
    hackermatch_grpc_stubs

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
    requests
style =
    flake8
    isort
prod =
    uWSGI

[options.entry_points]
console_scripts =
    hackermatch-api-server = hackermatch.api:main
