[metadata]
name = hackermatch_db
version = 0.0.1
description = HackerMatch Database
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    sqlalchemy
    psycopg2-binary

[options.extras_require]
test =
    pytest
    pytest-cov
style =
    flake8
    isort
migrate =
    alembic

[options.packages.find]
where = src
