[metadata]
name = hackermatch_email_server
version = 0.0.1
description = HackerMatch Email Server
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    grpcio
    grpcio-tools
    secure-smtplib
    hackermatch_grpc_stubs
    hackermatch_db

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
style =
    flake8
    isort

[options.entry_points]
console_scripts =
    hackermatch-email-server = hackermatch.email:main
