[metadata]
name = hackermatch_grpc_stubs
version = 0.0.1
description = HackerMatch gRPC Stubs
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
include_package_data = True
package_dir =
    = python
packages = find:

[options.packages.find]
where = python

[options.extras_require]
generate_stubs =
    protoletariat
    grpcio
    grpcio-tools
