[metadata]
name = hackermatch_submission_server
version = 0.0.1
description = HackerMatch Submission Server
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.10
include_package_data = True
package_dir =
    = src
packages = find:
install_requires =
    grpcio
    grpcio-tools
    sqlalchemy
    hackermatch_grpc_stubs
    hackermatch_db

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    pytest-cov
style =
    flake8
    isort

[options.entry_points]
console_scripts =
    hackermatch-submission-server = hackermatch.submission:main
